--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
 		"dev:test": "npx vitest",
 		"dev:client": "pnpm -r --filter @hwy-js/client run dev",
 		"dev:react": "pnpm -r --filter @hwy-js/react run dev",
-		"dev": "pnpm build && npm-run-all --parallel dev:*",
-		"add-pre": "node --experimental-strip-types scripts/npm/utils.ts --add-pre",
-		"remove-pre": "node --experimental-strip-types scripts/npm/utils.ts --remove-pre",
+		"dev": "npm-run-all --parallel dev:*",
+		"set-pre": "node --experimental-strip-types scripts/npm/utils.ts --set-pre",
+		"rmv-pre": "node --experimental-strip-types scripts/npm/utils.ts --rmv-pre",
 		"bump-pre": "node --experimental-strip-types scripts/npm/utils.ts --bump-pre",
 		"bump-patch": "node --experimental-strip-types scripts/npm/utils.ts --bump-patch",
 		"bump-minor": "node --experimental-strip-types scripts/npm/utils.ts --bump-minor",
