--- a/packages/npm/client/package.json
+++ b/packages/npm/client/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@hwy-js/client",
-	"version": "0.16.2",
+	"version": "0.16.3-pre.0",
 	"author": {
 		"name": "Samuel J. Cook"
 	},
@@ -13,15 +13,18 @@
 	"scripts": {
 		"build": "rm -rf dist && tsup-node index.ts --format esm --dts",
 		"dev": "rm -rf dist && tsup-node index.ts --format esm --dts --watch",
-		"publish-pre": "npm publish --access public --tag pre",
-		"publish-non-pre": "npm publish --access public",
+		"publish-pre": "pnpm publish --access public --tag pre",
+		"publish-non-pre": "pnpm publish --access public",
 		"update-latest": "pnpm update --latest",
 		"typecheck": "tsc --noEmit"
 	},
 	"dependencies": {
+		"@sjc5/kit": "0.0.0-pre.0",
 		"history": "^5.3.0"
 	},
 	"devDependencies": {
+		"@types/jsdom": "^21.1.7",
+		"jsdom": "^25.0.1",
 		"tsup": "^8.0.2",
 		"typescript": "^5.4.4"
 	},
