--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"dev:client": "pnpm -r --filter @hwy-js/client run dev",
 		"dev:react": "pnpm -r --filter @hwy-js/react run dev",
 		"dev": "npm-run-all --parallel dev:*",
-		"set-pre": "node --experimental-strip-types scripts/npm/utils.ts --set-pre",
+		"add-pre": "node --experimental-strip-types scripts/npm/utils.ts --add-pre",
 		"remove-pre": "node --experimental-strip-types scripts/npm/utils.ts --remove-pre",
 		"bump-pre": "node --experimental-strip-types scripts/npm/utils.ts --bump-pre",
 		"bump-patch": "node --experimental-strip-types scripts/npm/utils.ts --bump-patch",
