--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"dev:test": "npx vitest",
 		"dev:client": "pnpm -r --filter @hwy-js/client run dev",
 		"dev:react": "pnpm -r --filter @hwy-js/react run dev",
-		"dev": "pnpm build && npm-run-all --parallel dev:*",
+		"dev": "npm-run-all --parallel dev:*",
 		"add-pre": "node --experimental-strip-types scripts/npm/utils.ts --add-pre",
 		"remove-pre": "node --experimental-strip-types scripts/npm/utils.ts --remove-pre",
 		"bump-pre": "node --experimental-strip-types scripts/npm/utils.ts --bump-pre",
