--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 	"devDependencies": {
 		"@biomejs/biome": "^1.9.0",
 		"npm-run-all": "^4.1.5",
+		"tsup": "^8.3.6",
 		"typescript": "^5.4.4",
 		"vitest": "^1.4.0"
 	},
