--- a/packages/npm/client/tsconfig.json
+++ b/packages/npm/client/tsconfig.json
@@ -7,7 +7,10 @@
 		"strict": true,
 		"skipLibCheck": true,
 		"noEmit": true,
-		"esModuleInterop": true
+		"esModuleInterop": true,
+		"noUncheckedIndexedAccess": true,
+		"verbatimModuleSyntax": true,
+		"allowImportingTsExtensions": true
 	},
 	"exclude": ["node_modules", "dist"]
 }
