--- a/packages/npm/react/package.json
+++ b/packages/npm/react/package.json
@@ -24,11 +24,10 @@
 		"@sjc5/kit": "0.0.0-pre.0"
 	},
 	"devDependencies": {
-		"@types/react": "^18.3.5",
-		"@types/react-dom": "^18.3.0",
-		"react": "18.3.1",
-		"react-dom": "18.3.1",
-		"tsup": "^8.0.2",
+		"@types/react": "^19.0.9",
+		"@types/react-dom": "^19.0.3",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
 		"typescript": "^5.4.4"
 	},
 	"repository": {
