--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
 	"scripts": {
 		"build:client": "pnpm -r --filter @hwy-js/client run build",
 		"build:react": "pnpm -r --filter @hwy-js/react run build",
-		"build": "pnpm build:client && pnpm build:react",
+		"build:solid": "pnpm -r --filter @hwy-js/solid run build",
+		"build": "pnpm build:client && pnpm build:react && pnpm build:solid",
 		"dev:test": "npx vitest",
 		"dev:client": "pnpm -r --filter @hwy-js/client run dev",
 		"dev:react": "pnpm -r --filter @hwy-js/react run dev",
+		"dev:solid": "pnpm -r --filter @hwy-js/solid run dev",
 		"dev": "npm-run-all --parallel dev:*",
 		"add-pre": "node --experimental-strip-types scripts/npm/utils.ts --add-pre",
 		"remove-pre": "node --experimental-strip-types scripts/npm/utils.ts --remove-pre",
@@ -26,6 +28,7 @@
 		"test": "pnpm build && npx vitest run",
 		"typecheck:client": "pnpm -r --filter @hwy-js/client run typecheck",
 		"typecheck:react": "pnpm -r --filter @hwy-js/react run typecheck",
+		"typecheck:solid": "pnpm -r --filter @hwy-js/solid run typecheck",
 		"typecheck": "npm-run-all --parallel typecheck:*",
 		"run-before-publishing": "pnpm typecheck && make check && pnpm test",
 		"publish-pre": "pnpm run-before-publishing && pnpm -r publish-pre",
