--- a/biome.jsonc
+++ b/biome.jsonc
@@ -7,7 +7,7 @@
 	},
 	"files": {
 		"ignoreUnknown": false,
-		"includes": ["**", "!**/node_modules", "!kiruna/configschema/*schema.json"]
+		"includes": ["**", "!**/node_modules", "!npm_dist", "!kiruna/configschema/*schema.json"]
 	},
 	"formatter": {
 		"enabled": true,
