--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -13,5 +13,5 @@
 		"verbatimModuleSyntax": true,
 		"allowImportingTsExtensions": true
 	},
-	"exclude": ["**/node_modules"]
+	"exclude": ["**/node_modules", "npm_dist"]
 }
